[gd_scene load_steps=7 format=3 uid="uid://5lndbfyw8508"]

[ext_resource type="Texture2D" uid="uid://y63mff73f6si" path="res://assets/images/scenes/Inventory/background.png" id="2_wv7ps"]
[ext_resource type="Script" path="res://scenes/Inventory/Inventory.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://brmj8d233w4ry" path="res://assets/images/scenes/Inventory/slot.png" id="3_5bnx7"]
[ext_resource type="Texture2D" uid="uid://b7b3l5a8q3sll" path="res://assets/images/scenes/Inventory/selector.png" id="4_rlepb"]
[ext_resource type="AudioStream" uid="uid://dbawyisqeq0su" path="res://scenes/Inventory/376968__elmasmalo1__bubble-pop.wav" id="5"]
[ext_resource type="PackedScene" uid="uid://cj423x2nowula" path="res://scenes/ItemCard/ItemCard.tscn" id="6"]

[node name="Inventory" type="Node2D"]
script = ExtResource("3")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_right = 123.0
offset_bottom = 123.0
texture = ExtResource("2_wv7ps")
patch_margin_left = 7
patch_margin_top = 7
patch_margin_right = 7
patch_margin_bottom = 7

[node name="GridContainer" type="GridContainer" parent="NinePatchRect"]
modulate = Color(1, 0.105882, 1, 1)
layout_mode = 0
offset_left = 7.0
offset_top = 7.0
offset_right = 121.0
offset_bottom = 121.0
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 10

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect3" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect4" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect5" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect6" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect7" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect8" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect9" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect10" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect11" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect12" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect13" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect14" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect15" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect16" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect17" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect18" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect19" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect20" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect21" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect22" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect23" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect24" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect25" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect26" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect27" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect28" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect29" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect30" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect31" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect32" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect33" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect34" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect35" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect36" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect37" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect38" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect39" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect40" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect41" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect42" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect43" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect44" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect45" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect46" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect47" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect48" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect49" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect50" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect51" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect52" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect53" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect54" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect55" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect56" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect57" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect58" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect59" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect60" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect61" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect62" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect63" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect64" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect65" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect66" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect67" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect68" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect69" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect70" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect71" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect72" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect73" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect74" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect75" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect76" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect77" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect78" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect79" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect80" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect81" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect82" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect83" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect84" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect85" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect86" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect87" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect88" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect89" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect90" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect91" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect92" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect93" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect94" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect95" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect96" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect97" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect98" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect99" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="TextureRect100" type="TextureRect" parent="NinePatchRect/GridContainer"]
layout_mode = 2
texture = ExtResource("3_5bnx7")

[node name="Selector" type="Sprite2D" parent="."]
position = Vector2(12, 12)
texture = ExtResource("4_rlepb")

[node name="ShowSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")

[node name="SelectionSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5")

[node name="ItemCard" parent="." instance=ExtResource("6")]
